--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
-    <link rel="stylesheet" href="/css/index.css" />
-    <!-- <script src="/script/index.js" defer type="module"></script> -->
-    <script src="/script/index2.js" defer></script>
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js" defer type="module"></script>
   </head>
   <body class="test">
     <!-- Pull dynamic content from the data.json file -->
